# Viveka

./: .gitignore  LICENSE  LIMITS.md  README.md  demo.py  pyproject.toml  viveka-design-doc.md
tests/: benchmark.py  conftest.py  metrics.py  test_benchmark.py  test_real_scherf.py  test_units.py
witness_layer/: __init__.py  _scherf_stub.py  context.py  extraction.py  filter.py  findings.py  scherf_adapter.py  sorts.py  verdict.py
